--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -64,21 +64,11 @@ The course will introduce students to the theory and practice of data management
 well-established and the cutting-edge areas of the discipline.  The course also invites students to assess the
 correctness of their implementations and conduct both analytical and empirical evaluations of the performance of data
 management techniques.  Moreover, the course will ask students to implement small- and medium-scale data management
-systems and to install and use a wide variety of support tools. In addition to improving their ability teamwork skills,
-students will enhance their ability to write and speak about software in a clear and concise fashion. 
+systems and to install and use a wide variety of support tools. In addition to improving their teamwork skills, students
+will enhance their ability to write and speak about software in a clear and concise fashion. 
 
 \subsection*{Performance Objectives}
 
-At the completion of this class, a student should be aware of the fundamental challenges associated with software
-development.  Furthermore, students should be comfortable with a wide array of concepts, methodologies, techniques, and
-tools that they can apply to the problem of developing large software systems.  However, a successful student will
-emerge with more than an understanding of the tools (e.g., text editors, compilers, debuggers, integrated development
-environments, and version control systems) that a software engineer uses.  A student also should have a fundamental
-understanding of the major software life cycles and the activities that take place in each phase of these life cycles.
-Finally, a student should have a basic understanding of some of the current research and the open research questions in
-the field of software engineering.  After completing this class, a student should be equipped for further graduate study
-in the fields of computer science and software engineering.  The student should also be able to participate in
-real-world software development projects by adeptly using modern software tools and working with a team of developers.
 
 \subsection*{Required Textbooks}
 
