--- a/syllabus/syllabuspre.tex
+++ b/syllabus/syllabuspre.tex
@@ -1,3 +1,6 @@
+%!TEX root=cs380F2014-syllabus.tex
+% mainfile: cs380F2014-syllabus.tex 
+
 % CS 580 style
 % Typical usage (all UPPERCASE items are optional):
 %       \input 580pre
@@ -30,23 +33,23 @@
 \usepackage{tikz}
 \usepackage[normalem]{ulem}
 \tikzset{
-    %Define standard arrow tip
-%    >=stealth',
-    %Define style for boxes
-    oval/.style={
-           rectangle,
-           rounded corners,
-           draw=black, very thick,
-           text width=6.5em,
-           minimum height=2em,
-           text centered},
-    % Define arrow style
-    arr/.style={
-           ->,
-           thick,
-           shorten <=2pt,
-           shorten >=2pt,}
-}
+  %Define standard arrow tip
+  %    >=stealth',
+  %Define style for boxes
+  oval/.style={
+    rectangle,
+    rounded corners,
+    draw=black, very thick,
+    text width=6.5em,
+    minimum height=2em,
+    text centered},
+  % Define arrow style
+  arr/.style={
+    ->,
+    thick,
+    shorten <=2pt,
+    shorten >=2pt,}
+  }
 \usepackage[noend]{algorithmic}
 \usepackage[noend]{algorithm}
 \newcommand{\bfor}{{\bf for\ }}
@@ -64,72 +67,72 @@
 \renewcommand{\algorithmiccomment}[1]{$\rhd$ #1}
 \newenvironment{checklist}{\par\noindent\hspace{-.25in}{\bf Checklist:}\renewcommand{\labelitemi}{$\Box$}%
 \begin{itemize}}{\end{itemize}}
-\pagestyle{threepartheadings}
-\usepackage{url}
-\usepackage{wrapfig}
-% removing the standard hyperref to avoid the horrible boxes
-%\usepackage{hyperref}
-\usepackage[hidelinks]{hyperref}
-% added in the dtklogos for the bibtex formatting
-\usepackage{dtklogos}
-%=========================
-% One-inch margins everywhere
-%=========================
-\setlength{\topmargin}{0in}
-\setlength{\textheight}{8.5in}
-\setlength{\oddsidemargin}{0in}
-\setlength{\evensidemargin}{0in}
-\setlength{\textwidth}{6.5in}
-%===============================
-%===============================
-% Macro for document title:
-%===============================
-\newcommand{\MYTITLE}[1]%
-   {\begin{center}
-     \begin{center}
-     \bf
-     CMPSC 290\\Principles of Software Development\\
-     Fall 2013
-     \medskip
-     \end{center}
-     \bf
-     #1
-     \end{center}
-}
-%================================
-% Macro for headings:
-%================================
-\newcommand{\MYHEADERS}[2]%
-   {\lhead{#1}
+  \pagestyle{threepartheadings}
+  \usepackage{url}
+  \usepackage{wrapfig}
+  % removing the standard hyperref to avoid the horrible boxes
+  %\usepackage{hyperref}
+  \usepackage[hidelinks]{hyperref}
+  % added in the dtklogos for the bibtex formatting
+  \usepackage{dtklogos}
+  %=========================
+  % One-inch margins everywhere
+  %=========================
+  \setlength{\topmargin}{0in}
+  \setlength{\textheight}{8.5in}
+  \setlength{\oddsidemargin}{0in}
+  \setlength{\evensidemargin}{0in}
+  \setlength{\textwidth}{6.5in}
+  %===============================
+  %===============================
+  % Macro for document title:
+  %===============================
+  \newcommand{\MYTITLE}[1]%
+  {\begin{center}
+      \begin{center}
+        \bf
+        CMPSC 380\\Principles of Database Systems\\
+        Fall 2014
+        \medskip
+      \end{center}
+      \bf
+      #1
+    \end{center}
+    }
+  %================================
+  % Macro for headings:
+  %================================
+  \newcommand{\MYHEADERS}[2]%
+  {\lhead{#1}
     \rhead{#2}
     %\immediate\write16{}
     %\immediate\write16{DATE OF HANDOUT?}
     %\read16 to \dateofhandout
-    \def \dateofhandout {August 27, 2013}
+    \def \dateofhandout {August 26, 2014}
     \lfoot{\sc Handed out on \dateofhandout}
     %\immediate\write16{}
     %\immediate\write16{HANDOUT NUMBER?}
     %\read16 to\handoutnum
     \def \handoutnum {1}
     \rfoot{Handout \handoutnum}
-   }
+    }
 
-%================================
-% Macro for bold italic:
-%================================
-\newcommand{\bit}[1]{{\textit{\textbf{#1}}}}
+  %================================
+  % Macro for bold italic:
+  %================================
+  \newcommand{\bit}[1]{{\textit{\textbf{#1}}}}
 
-%=========================
-% Non-zero paragraph skips.
-%=========================
-\setlength{\parskip}{1ex}
+  %=========================
+  % Non-zero paragraph skips.
+  %=========================
+  \setlength{\parskip}{1ex}
 
-%=========================
-% Create various environments:
-%=========================
-\newcommand{\PURPOSE}{\par\noindent\hspace{-.25in}{\bf Purpose:\ }}
-\newcommand{\SUMMARY}{\par\noindent\hspace{-.25in}{\bf Summary:\ }}
-\newcommand{\DETAILS}{\par\noindent\hspace{-.25in}{\bf Details:\ }}
-\newcommand{\HANDIN}{\par\noindent\hspace{-.25in}{\bf Hand in:\ }}
-\newcommand{\SUBHEAD}[1]{\bigskip\par\noindent\hspace{-.1in}{\sc #1}\\}
-%\newenvironment{CHECKLIST}{\begin{itemize}}{\end{itemize}}
+  %=========================
+  % Create various environments:
+  %=========================
+  \newcommand{\PURPOSE}{\par\noindent\hspace{-.25in}{\bf Purpose:\ }}
+  \newcommand{\SUMMARY}{\par\noindent\hspace{-.25in}{\bf Summary:\ }}
+  \newcommand{\DETAILS}{\par\noindent\hspace{-.25in}{\bf Details:\ }}
+  \newcommand{\HANDIN}{\par\noindent\hspace{-.25in}{\bf Hand in:\ }}
+  \newcommand{\SUBHEAD}[1]{\bigskip\par\noindent\hspace{-.1in}{\sc #1}\\}
+  %\newenvironment{CHECKLIST}{\begin{itemize}}{\end{itemize}}
