--- a/syllabus/cs380F2014-syllabus.tex
+++ b/syllabus/cs380F2014-syllabus.tex
@@ -216,10 +216,10 @@ the course.
 
 \subsubsection*{Use of Laboratory Facilities}
 
-Throughout the semester, we will experiment with many different tools that software engineers use during the phases of
-the software development life cycle.  The course instructor and the department's systems administrator have invested a
-considerable amount of time to ensure that our laboratories support the completion of both the laboratory assignments and the
-final project.  To this end, students are required to complete all assignments and the final project while using the
+Throughout the semester, we will experiment with many different tools that data managers use during the phases of the
+data management process.  The course instructor and the department's systems administrator have invested a considerable
+amount of time to ensure that our laboratories support the completion of both the laboratory assignments and the final
+project.  To this end, students are required to complete all assignments and the final project while using the
 department's laboratory facilities. The course instructor and the systems administrator will only be able to devote a
 limited amount of time to the configuration of a student's personal computer.
 
@@ -234,12 +234,12 @@ limited amount of time to the configuration of a student's personal computer.
 
 In order to minimize confusion and maximize learning, students must invest time to prepare for class discussions and
 lectures.  During the class periods, the course instructor will often pose demanding questions that could require group
-discussion, the creation of a program or test suite, a vote on a thought-provoking issue, or a group presentation.
-Only students who have prepared for class by reading the assigned material and reviewing the current assignments will be
-able to effectively participate in these discussions.  More importantly, only prepared students will be able to acquire
-the knowledge and skills that are needed to be successful in both this course and the field of software development.  In
-order to help students remain organized and effectively prepare for classes, the course instructor will maintain a class
-schedule with reading assignments and presentation slides.   During the class sessions students will also be required to
+discussion, the creation of a program or test suite, a vote on a thought-provoking issue, or a group presentation.  Only
+students who have prepared for class by reading the assigned material and reviewing the current assignments will be able
+to effectively participate in these discussions.  More importantly, only prepared students will be able to acquire the
+knowledge and skills that are needed to be successful in both this course and the field of data management.  In order to
+help students remain organized and effectively prepare for classes, the course instructor will maintain a class schedule
+with reading assignments and presentation slides.   During the class sessions students will also be required to
 download, use, and modify programs, diagrams, and data sets that are made available through the course Web site.
 Students who are not comfortable with compiling, editing, and running Java programs should see the course instructor.
 
