--- a/labs/lab1/cs380F2014-lab1.tex
+++ b/labs/lab1/cs380F2014-lab1.tex
@@ -1,22 +1,23 @@
-%!TEX root=cs112S2014-lab1.tex
-% mainfile: cs112S2014-lab1.tex 
+%!TEX root=cs380F2014-lab1.tex
+% mainfile: cs380F2014-lab1.tex
 
 \input{labspre.tex}
 
 \usepackage[compact]{titlesec}
 
 \begin{document}
-\MYTITLE{Laboratory Assignment One: Version Control with Git and Bitbucket}
-\MYHEADERS{Laboratory Assignment One}{Due: January 28, 2014}
+\MYTITLE{Laboratory Assignment One: Introducing Data Management Concepts and Tools}
+\MYHEADERS{Laboratory Assignment One}{Due: September 3, 2014}
 
 \section*{Introduction}
 
-Practicing software developers normally use a version control system to manage most of the artifacts produced during the
-phases of the software development life cycle.  In this course, we will always use the Git distributed version control
-system to manage the files associated with our laboratory assignments.  In this laboratory assignment, you will learn
-how to use the Bitbucket service for managing Git repositories and the {\tt git} command-line tool in the Ubuntu Linux
-operating system. After connecting to the course's Git repository and creating your own repository, you will compile and
-run two Java programs, write about their output, and commit your final report to a repository.
+Practicing data management professionals use a wide variety of tools to manage data sets. When the task at hand requires
+the management of files, many people will use a version control system like Git.  In this course, we will always use the
+Git distributed version control system to manage the files associated with our laboratory assignments and the final
+project.  In this laboratory assignment, you will learn how to use the Bitbucket service for managing Git repositories
+and the {\tt git} command-line tool in the Ubuntu Linux operating system. After connecting to the course's Git
+repository and creating your own repository, you will use a text editor to prepare a brief report on the features and
+installation procedures associate with data management tools.
 
 \section*{Configuring Git and Bitbucket}
 
