--- a/labs/lab1/labspre.tex
+++ b/labs/lab1/labspre.tex
@@ -1,5 +1,6 @@
-%!TEX root=cs112S2014-lab1.tex
-% mainfile: cs112S2014-lab1.tex 
+%!TEX root=cs380F2014-lab1.tex
+% mainfile: cs380F2014-lab1.tex 
+
 % Typical usage (all UPPERCASE items are optional):
 %       \input 580pre
 %       \begin{document}
@@ -89,8 +90,8 @@
    {\begin{center}
      \begin{center}
      \bf
-     CMPSC 112\\Introduction to Computer Science II\\
-     Spring 2014
+     CMPSC 380\\Principles of Database Systems\\
+     Fall 2014
      \medskip
      \end{center}
      \bf
@@ -106,7 +107,7 @@
     %\immediate\write16{}
     %\immediate\write16{DATE OF HANDOUT?}
     %\read16 to \dateofhandout
-    \def \dateofhandout {January 21, 2014}
+    \def \dateofhandout {August 27, 2014}
     \lfoot{\sc Handed out on \dateofhandout}
     %\immediate\write16{}
     %\immediate\write16{HANDOUT NUMBER?}
